# packet_analyzer

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  clean.sh  cmake_install.cmake  main.cpp  resources.qrc  vcpkg.json
.cmake/api/v1/reply/: cache-v2-79a7a01f4c9a85d488af.json  cmakeFiles-v1-f694bb6613f38e7c2d8a.json  codemodel-v2-0914d6cede0948b301f7.json  index-2025-07-31T20-37-08-0387.json  target-capture-Debug-c2d77538cabbd42ed613.json  target-capture_autogen-Debug-9c0f17390730f1de0d86.json  target-capture_autogen_timestamp_deps-Debug-ef9d7acd76ffa8c947d4.json  target-main_src-Debug-dffa35897f9b38170b1d.json  target-main_src_autogen-Debug-3786cd1d573b9ba3fa48.json  target-main_src_autogen_timestamp_deps-Debug-454f8c4d5832797495ec.json  target-sniffer_main-Debug-2503fe50256c95012126.json  target-sniffer_main_autogen-Debug-fdef815dba85aa46a56b.json  target-sniffer_main_autogen_timestamp_deps-Debug-30231422fea886cd24f0.json
.qt/: QtDeploySupport.cmake  QtDeployTargets.cmake
benchmarks/: CMakeLists.txt  bench_test.cpp  parsing_benchmark.cpp  push_pop_benchmark.cpp
include/capture/: CaptureConfig.h  CaptureSession.h  Offline.h  Online.h  PacketCapture.h
include/controller/: CaptureController.h  StartupWindowController.h
include/layer2_protocols/: EN10MB.h  Ethernet.h  Layer2.h  Layer2Types.h  _802_11.h
include/layer3_protocols/: IPv4.h  Layer3.h  Layer3Types.h
include/layer4_protocols/: Layer4.h  Layer4Types.h  TCP.h
include/layerx/: Layer.h  ParseFormat.h  ProtocolDataUnit.h  ProtocolKeys.h  ProtocolTypes.h  Registry.h  iana_numbers.h
include/layerx/layer2/: Ethernet.h  Layer2.h  Layer2Registry.h  Layer2Types.h
include/layerx/layer3/: IPv4.h  IPv6.h  Layer3.h  Layer3Registry.h  Layer3Types.h
include/layerx/layer4/: ICMP.h  Layer4.h  Layer4Registry.h  Layer4Types.h  TCP.h  UDP.h
include/model/: DetailModel.h  DisplayModel.h  RowModel.h
include/packet/: LayerUtil.h  LayerWrappers.h  PacketUtil.h  PcapArray.h  PcapDumperWrapper.h  PcapFile.h  PcapReader.h  ProtocolTypes.h
include/parsing/: DetailParse.h  DetailParser.h  InitialParser.h  PacketParse.h  ParseDispatcher.h  ParsingEngine.h  ThreadPool.h  ThreadPool.tpp
include/parsing/util/: PacketRead.h
include/session/: CaptureSession.h  Stream.h  StreamTable.h
include/util/: DetailsReader.h  IContainerType.h  LRUCache.h  LRUCache.tpp  Overload.h  PacketBuffer.h  PacketGetter.h  PacketObserver.h  PacketPresenter.h  PacketRead.h  PacketRefBuffer.h  RowFactory.h  SparsePacketBuffer.h  ThreadPool.h  ThreadPool.tpp  TreeModelFactory.h
include/view/: MainWindow.h  SessionForm.h  Sidebar.h  StartupWindow.h  ThroughputChart.h
src/: CMakeLists.txt  main.cpp
src/Packet/: CMakeLists.txt  Packet.cpp  Packet.h  PcapArray.cpp  PcapFile.cpp  PcapReader.cpp  ProtocolTypes.h
src/Packet/layer2_protocols/: CMakeLists.txt  EN10MB.cpp  Ethernet.cpp  _802_11.cpp
src/Packet/layer3_protocols/: IPv4.cpp
src/Packet/layer4_protocols/: CMakeLists.txt  TCP.cpp
src/Packet/parsing/: CMakeLists.txt  PacketParse.cpp  PacketRead.cpp
src/capture/: CMakeLists.txt  CaptureSession.cpp  Offline.cpp  Offline.h  Online.cpp  Online.h  PacketCapture.cpp  PacketCapture.h
src/controller/: CMakeLists.txt  CaptureController.cpp  StartupWindowController.cpp
src/data_structures/: DispatchTable.h
src/layerx/: CMakeLists.txt  Layer.cpp
src/layerx/layer2/: CMakeLists.txt  Ethernet.cpp  Layer2.cpp  Layer2Registry.cpp
src/layerx/layer3/: CMakeLists.txt  IPv4.cpp  IPv6.cpp  Layer3.cpp  Layer3Registry.cpp
src/layerx/layer4/: CMakeLists.txt  ICMP.cpp  Layer4.cpp  Layer4Registry.cpp  TCP.cpp  UDP.cpp
src/model/: CMakeLists.txt  DetailModel.cpp  DisplayModel.cpp  RowModel.cpp
src/packet/: CMakeLists.txt  PacketUtil.cpp  PcapArray.cpp  PcapFile.cpp  PcapReader.cpp
src/parsing/: CMakeLists.txt  DetailParser.cpp  InitialParser.cpp  LinkLayer.cpp  LinkLayer.h  PacketParse.cpp  PacketParsing.cpp  PacketParsing.h  ParsingEngine.cpp  ThreadPool.cpp
src/session/: CMakeLists.txt  CaptureSession.cpp  Stream.cpp  StreamTable.cpp
src/util/: CMakeLists.txt  DetailsReader.cpp  PacketBuffer.cpp  PacketGetter.cpp  PacketObserver.cpp  PacketPresenter.cpp  PacketRead.cpp  PacketRefBuffer.cpp  RowFactory.cpp  TreeModelFactory.cpp
src/view/: CMakeLists.txt  MainWindow.cpp  SessionForm.cpp  Sidebar.cpp  StartupWindow.cpp  ThroughputChart.cpp
tests/: CMakeLists.txt  MockPcapDumper.h  main.cpp  pcap_files  pcap_files.pcap  pcap_files1.pcap  test_CaptureSession.cpp  test_LRUCache.cpp  test_PacketBuffer.cpp  test_PacketParse.cpp  test_ParsingEngineTest.cpp  test_PcapFile.cpp  test_ThreadPool.cpp  test_layer2.cpp  test_layer3.cpp  test_layer4.cpp  test_protcol.cpp
